OOP problems fix